--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <div class="col-md-7">
                    <h1>Mackbook Pro</h1>
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ex cupiditate modi iure architecto dolor consectetur?</p>
-                   <button style="background-color:red;border-radius: 5px;">Buy Now-></button>
+                   <button style="background-color:rgb(228, 48, 48);border-radius: 5px;">Buy Now-></button>
                   </div>
                   <div class="col-md-5">
                     <img class="d-block w-100" src="hot-gadgets/banner-products/product-1.png" alt="First slide">
@@ -121,7 +121,6 @@
     </div>
   </div>
 </div>
-
 <div class="container">
   <div class="d-flex bd-highlight">
     <div class="p-2 flex-fill bd-highlight">Laptop</div>
@@ -159,7 +158,30 @@
       </div>
     </div>
   </div>
-
+ </div>
+ <h1 style="text-align: center;margin-top:40px;"><u style="color: rgb(204, 204, 75);">Categories</u></h1>
+ <div class="container">
+   <div class="row">
+     <div class="col-md-6">
+      <div class="d-flex">
+        <div class="flex-shrink-0">
+          <img style="margin-top: 200px;" src="hot-gadgets/Categories/bag.png" alt="">
+        </div>
+        <div class="flex-grow-1 ms-3">
+          <div class="d-flex flex-column-reverse bd-highlight">
+            <div class="p-2 bd-highlight"><img style="margin-top: 100px;margin-left: 80px;" src="hot-gadgets/Categories/perfume.png">
+            </div>
+          </div>
+          <img style="margin-top: 80px;margin-left: 80px;" src="hot-gadgets/Categories/shoe.png">
+        </div>
+        
+      </div>
+    
+     </div>
+     <div class="col-md-6">
+       <img style="margin-left: -60px;" src="hot-gadgets/Categories/pale-order.png">
+     </div>
+   </div>
  </div>
 </body>
 </html>
